Sat Jan  2 12:26:20 1999  Adam Fedor  <fedor@ultra.doc.com>

	* configure.in: Check for DPS/dpsNXargs.h header.

Wed Dec 30 15:08:14 1998  Adam Fedor  <fedor@doc.com>

	* target.make (TARGET_SYSTEM_LIBS): Add FreeBSD specific libs. Use
 	$(objc_threaded) when adding thread lib to Solaris.

Mon Dec 21 11:04:45 1998  Matthias Klose  <doko@cs.tu-berlin.de>

        * common.make: New macros MAJOR_VERSION (0), MINOR_VERSION (5),
          SUBMINOR_VERSION (0) forming VERSION.
        * library.make: internal-uninstall-lib: rm SONAME_LIBRARY_FILE.
          Rename VERSION_MAJOR_LIBRARY_FILE to SONAME_LIBRARY_FILE.
          New macro SOVERSION.
        * target.make: define -D_REENTRANT for linux-gnu objc_threaded.
          For Solaris define AFTER_INSTALL_SHARED_LIB_COMMAND and set
          shared object name for library.

Mon Dec 21 11:04:45 1998  Matthias Klose  <doko@cs.tu-berlin.de>

        * aggregate.make: Exit with original exit status from submakes.

Sat Dec 19 01:26:06 1998  Matthias Klose  <doko@cs.tu-berlin.de>

        * config.make.in: New macro MKDIRS defaults to
          $(GNUSTEP_MAKEFILES)/mkinstalldirs.
        * application.make: Use macro MKDIRS.
        * bundle.make: likewise
        * library.make: likewise
        * documentation.make: likewise
        * objc.make: likewise
        * rules.make: likewise
        * service.make: likewise
        * tool.make: likewise
        * test-library.make: likewise

Sat Dec 19 10:57:22 1998  Adam Fedor  <fedor@ultra.doc.com>

	* aggregate.make: Look for Makefile.

Thu Dec 17 11:42:06 1998  Adam Fedor  <fedor@ultra.doc.com>

	* test-library.make (ALL_TEST_LIBRARY_LIBS): Remove duplicate lib.

Wed Dec 16 13:46:09 1998  Adam Fedor  <fedor@ultra.doc.com>

	* target.make (AFTER_INSTALL_SHARED_LIB_COMMAND): New macro for
 	Linux (patch from Matthias Klose <doko@cs.tu-berlin.de>).

Tue Dec 15 12:36:52 1998  Adam Fedor  <fedor@ultra.doc.com>

	* GNUmakefile.in: Add $(EXEEXT) to which_lib